# unusefulscripts

./: .project  .pydevproject  EstraiData.py  EstraiData.sh  MOOD.sh  MangaLeecher.py  Numera.py  README.md  Rinomina.py  Ripristina.py  SistemaCase.py  SistemaNumeri.py  Tagga.py  Televideo.py  Thumbs.py  TouchpadEnable.sh  Turing.py  UnicodeName.py  Walla.py  aggiorna_lista_movimenti.py  ark_extract_helper.sh  calcolaTimeDelta.py  check_requirements.sh  clocks.py  contabatt.py  dot2ps.sh  dot2svg.sh  dotdisplay.sh  drawMRO.py  ie6  imageMassTag.sh  kaiba.sh  latin9_to_utf8.sh  mathval.py  mp  offset_changer.py  pszoom.py  pyproject.toml  raggruppamenti.cat  raggruppamenti.sh  (+13 more)
src/: EstraiData.py  Numera.py  Rinomina.py  Ripristina.py  SistemaCase.py  SistemaNumeri.py  Televideo.py  Thumbs.py  UnicodeName.py  Walla.py  clocks.py  estraidata.py  numera.py  offset_changer.py  prepend.py  rinomina.py  ripristina.py  sistemacase.py  sistemanumeri.py  slacknews.py  suboffsetchanger.py  televideo.py  thumbs.py  trovaRaggruppamenti.py  trovaraggruppamenti.py  unicodenames.py  ygo.py
tests/: test_clocks.py  test_estraidata.py  test_prepend.py  test_sistemanumeri.py  test_trovaraggruppamenti.py
trunk/: .kateproject  EstraiData.py  EstraiData.sh  Giuseppe.py  MangaLeecher.py  Numera.py  PackageSize.sh  Rinomina.py  SistemaNumeri.py  Televideo.py  Thumbs.py  TouchpadDisable.sh  Turing.py  UnicodeName.py  Walla.py  _MOOD_HELPER.sh  acc.py  aggiorna_lista_movimenti.py  aggiorna_lista_postepay.py  clocks.py  contabatt.py  cp1252_to_utf8.sh  dos2lin.py  dot2ps.sh  drawMRO.py  joey.sh  offset_changer.py  prolog.sh  pszoom.py  rotate.py  sky.py  slacknews.py  swap.sh  tclocks.py  tex2png.sh  trash.sh  trovaRaggruppamenti.py  websequencediagrams.py  win2lin.py  ygo.py  (+1 more)
