[project]
name = "unusefulscripts"
version = "0.0.0"
requires-python = "==3.12.*"
readme = "README.md"
dependencies = [
    "Pillow>=10.4.0",
]

[project.urls]
Homepage = "https://github.com/ZeeD/unusefulscripts"
Repository = "https://github.com/ZeeD/unusefulscripts.git"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.1",
]
[tool.mypy]
mypy_path = ["src", "tests"]
strict = true
warn_unused_configs = true

[tool.ruff]
fix = true
line-length = 80
src = ["src", "tests"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # disabled by me
    "D1","ANN1","PT009",
    # incompatibilities
    "D203", # D211
    "D213", # D212
    # conflicts with formatter
    "COM812","ISC001","Q001","Q002"
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.ruff.lint.isort]
force-single-line = true

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.report]
show_missing = true
sort = "Cover"
skip_empty = true

[tool.pdm.scripts]
lint = { composite = [
    "ruff format .",
    "ruff check --exit-zero .",
    "dmypy run .",
]}
